@@ -1,4 +1,4 @@
-- stop pulse when stopping
+
 
 - new add to notication and migrate old settings
 
